--- a/style.css
+++ b/style.css
@@ -52,3 +52,39 @@ background-position: right;
 
 }
 
+.proleveldevoloper{
+color: sienna;
+}
+.useboxshed{
+    
+       border-left: 7px solid;
+  padding: 10px;
+  box-shadow: 5px 10px 18px #888888;
+border-image: linear-gradient(red,blue);
+border-image-slice: 1;
+       
+padding-left: 25px;
+width: auto;
+margin-left: 20px;
+margin-bottom: 30px;
+}
+.threesection{
+ 
+  margin-top: 70px;
+margin-bottom: 80px;
+display: flex;
+margin-left: 50px;
+margin-right: 50px;
+height: 350px; 
+
+
+}
+.bgimages{
+background-image: url(images/exp-bg.png);
+background-repeat: no-repeat;
+background-position: left;
+}
+footer p{
+text-align: center;
+
+}
